--- a/requirements/base.in
+++ b/requirements/base.in
@@ -2,4 +2,6 @@
 -c constraints.txt
 
 Django             # Web application framework
-
+openedx-filters                     # Open edX Filters from Hooks Extension Framework (OEP-50)
+edx-django-utils
+edx-opaque-keys
